--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -361,9 +361,11 @@
   justify-content: space-between;
 }
 .blog-post-item__title {
+  flex: 3;
   font-size: 1.2rem;
 }
 .blog-post-item__date-group {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
