--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -28,10 +28,12 @@
     }
 
     &__title {
+        flex: 3;
         font-size: fSizes.$large;
     }
 
     &__date-group {
+        flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
