--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -449,11 +449,14 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
 }
 .logging-page__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 26rem;
+  width: 32rem;
   margin-bottom: 5%;
   padding: 4rem;
   border: 2px solid rgb(36, 36, 36);
