--- a/public/stylesheets/views/layouts/_logging.scss
+++ b/public/stylesheets/views/layouts/_logging.scss
@@ -6,11 +6,14 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    width: 100%;
 
     &__container {
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 26rem;
+        width: 32rem;
         margin-bottom: 5%;
         padding: 4rem;
         border: 2px solid colors.$bg2;
