--- a/views/pages/loginForm.pug
+++ b/views/pages/loginForm.pug
@@ -2,7 +2,7 @@ extends ../layouts/logging
 include ../components/form/loggingForm
 
 block loggingForm
-    - const {inputs, errors} = data
-    
+    - const { inputs } = data
+
     h1.logging-page__heading Log In
-    +loggingForm('/login', inputs, errors)
+    +loggingForm('/login', inputs)
