--- a/views/pages/blogPostForm.pug
+++ b/views/pages/blogPostForm.pug
@@ -43,7 +43,7 @@ block page
                         - const keywords = blogPost.keywords
                         +formTextarea(
                             'keywords',
-                            keywords ? keywords.split(' ') : '',
+                            keywords ? keywords.join(' ') : '',
                             {
                                 'textarea': {
                                     'rows': '2'
