--- a/views/components/toolbar/accountSidebar.pug
+++ b/views/components/toolbar/accountSidebar.pug
@@ -3,18 +3,18 @@ include ../icon/iconElement
 
 .account-sidebar.sidebar.-closed
     .sidebar__title Account
-    if mainUser
+    if loginUser
         - let icon = '/images/profileIcon.png'
         
-        if mainUser.profile_pic
-            - const pic = mainUser.profile_pic
+        if loginUser.profile_pic
+            - const pic = loginUser.profile_pic
             - const base64 = pic.data.toString('base64')
             - icon = `data:${pic.contentType};base64,${base64}`
             
         +iconElement(
             'div',
             icon,
-            mainUser.username,
+            loginUser.username,
             {
                 'class': [
                     'account-sidebar__overview',
@@ -30,7 +30,7 @@ include ../icon/iconElement
                 'icon': '/images/profileIcon.png',
                 'label': 'Your Profile',
                 'attrs': {
-                    'href': `/users/${mainUser.username}`,
+                    'href': `/users/${loginUser.username}`,
                 }
             },
             {
@@ -38,7 +38,7 @@ include ../icon/iconElement
                 'icon': '/images/blogPostIcon.png',
                 'label': 'Your Blog Posts',
                 'attrs': {
-                    'href': `/users/${mainUser.username}/blog-posts`,
+                    'href': `/users/${loginUser.username}/blog-posts`,
                 }
             }],
             {
