--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@
 }
 .blog-post-card__overview {
   width: 100%;
+  background-size: cover;
 }
 .blog-post-card__overlay {
   display: flex;
@@ -40,6 +41,7 @@
   overflow: hidden;
   margin: 0;
   font-size: 1.5rem;
+  word-break: break-all;
 }
 .blog-post-card__preview {
   display: -webkit-box;
@@ -177,6 +179,7 @@
 .blog-post-fragment__title {
   font-size: 1.5rem;
   font-weight: bold;
+  word-break: break-all;
 }
 .blog-post-fragment__thumbnail {
   display: flex;
@@ -319,6 +322,7 @@
   overflow: hidden;
   flex: 3;
   font-size: 1.2rem;
+  word-break: break-all;
 }
 .blog-post-item__date-group {
   flex: 1;
@@ -411,7 +415,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 26rem;
+  min-height: 26rem;
   width: 32rem;
   margin-bottom: 5%;
   padding: 4rem;
@@ -537,7 +541,7 @@
   height: 100%;
   width: 100%;
   padding: 1rem;
-  border: 2px solid white;
+  border: 2px solid rgb(36, 36, 36);
 }
 .blog-post-form-page__right > .blog-post-form-page__body {
   overflow-y: auto;
@@ -547,7 +551,7 @@
 .blog-post-form {
   height: 100%;
   width: 100%;
-  border-top: 2px solid white;
+  border-top: 2px solid rgb(36, 36, 36);
   padding-top: 1rem;
 }
 .blog-post-form__metadata {
@@ -591,6 +595,7 @@
   margin: 0;
   border-bottom: 6px solid rgb(36, 36, 36);
   font-size: 3rem;
+  word-break: break-all;
 }
 .blog-post__metadata {
   display: flex;
@@ -687,12 +692,15 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  min-width: 0;
 }
 .profile__secondary {
   flex: 1;
+  min-width: 0;
 }
 .profile__tertiary {
   flex: 1;
+  min-width: 0;
 }
 .profile__avatar {
   height: 20rem;
@@ -704,6 +712,7 @@
 .profile__username {
   font-size: 1.5rem;
   font-weight: bold;
+  word-break: break-all;
 }
 .profile__heading {
   margin-bottom: 1rem;
