--- a/public/stylesheets/views/layouts/_logging.scss
+++ b/public/stylesheets/views/layouts/_logging.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 26rem;
+        min-height: 26rem;
         width: 32rem;
         margin-bottom: 5%;
         padding: 4rem;
