--- a/public/stylesheets/views/pages/_blog-post.scss
+++ b/public/stylesheets/views/pages/_blog-post.scss
@@ -31,6 +31,7 @@
         margin: 0;
         border-bottom: 6px solid colors.$bg2;
         font-size: fSizes.$xxlarge;
+        word-break: break-all;
     }
 
     &__metadata {
