--- a/public/stylesheets/views/pages/_user-profile.scss
+++ b/public/stylesheets/views/pages/_user-profile.scss
@@ -21,15 +21,17 @@
         flex-direction: column;
         align-items: center;
         gap: 1rem;
+        min-width: 0;
     }
 
     &__secondary {
         flex: 1;
-        
+        min-width: 0;
     }
 
     &__tertiary {
         flex: 1;
+        min-width: 0;
     }
 
     &__avatar {
@@ -44,6 +46,7 @@
     &__username {
         font-size: fSizes.$larger;
         font-weight: bold;
+        word-break: break-all;
     }
 
     &__heading {
